# platform.core.appfw.tpk-backend

./: CMakeLists.txt
packaging/: tpk-backend-tests.manifest  tpk-backend.manifest  tpk-backend.spec
src/: CMakeLists.txt
src/tpk/: .tpk_installer.cc.swp  CMakeLists.txt  external_dirs.cc  external_dirs.h  tpk-installer.pc.in  tpk_app_query_interface.cc  tpk_app_query_interface.h  tpk_backend.cc  tpk_installer.cc  tpk_installer.h  tpk_mount_path.cc  tpk_mount_path.h
src/tpk/step/: step_check_pkg_directory_path.cc  step_check_pkg_directory_path.h  step_check_tpk_background_category.cc  step_check_tpk_background_category.h  step_convert_xml.cc  step_convert_xml.h  step_create_symbolic_link.cc  step_create_symbolic_link.h  step_direct_manifest_check_signature.cc  step_direct_manifest_check_signature.h  step_manifest_adjustment.cc  step_manifest_adjustment.h  step_parse.cc  step_parse.h  step_parse_preload.cc  step_parse_preload.h  step_parse_recovery.cc  step_parse_recovery.h  step_tpk_create_icons.cc  step_tpk_create_icons.h  step_tpk_patch_icons.cc  step_tpk_patch_icons.h
src/tpk/step/configuration/: step_parse_preload.cc  step_parse_preload.h
src/tpk/step/filesystem/: step_check_pkg_directory_path.cc  step_check_pkg_directory_path.h  step_create_external_storage_directories.cc  step_create_external_storage_directories.h  step_create_symbolic_link.cc  step_create_symbolic_link.h  step_grant_permission.cc  step_grant_permission.h  step_remove_external_storage_directories.cc  step_remove_external_storage_directories.h  step_tpk_patch_icons.cc  step_tpk_patch_icons.h  step_tpk_prepare_package_directory.cc  step_tpk_prepare_package_directory.h  step_tpk_update_package_directory.cc  step_tpk_update_package_directory.h  step_update_external_storage_directories.cc  step_update_external_storage_directories.h
src/tpk/step/pkgmgr/: step_convert_xml.cc  step_convert_xml.h  step_manifest_adjustment.cc  step_manifest_adjustment.h
src/tpk/step/rds/: step_tpk_rds_modify.cc  step_tpk_rds_modify.h
src/tpk/step/security/: step_check_tpk_background_category.cc  step_check_tpk_background_category.h
src/unit_tests/: CMakeLists.txt  manifest_test.cc  manifest_test.h  manifest_test_package.cc  manifest_test_service_application.cc  manifest_test_ui_application.cc  manifest_test_watch_application.cc  manifest_test_widget_application.cc  smoke_test.cc  smoke_test_helper.cc
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Email_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Email_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Href_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Href_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Many/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Text_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.AuthorElement_Valid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.DescriptionElement_Lang_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.DescriptionElement_Many/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.DescriptionElement_Text_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.DescriptionElement_Valid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_ApiVersion_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_ApiVersion_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_ApiVersion_Valid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_DoubleRootElement/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_InstallLocation_Auto/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_InstallLocation_InternalOnly/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_InstallLocation_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_InstallLocation_PreferExternal/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_InvalidRootElement/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Package_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Package_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Type_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Type_Rpm/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Type_Tpk/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Type_Wgt/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Version_Invalid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Version_Missing/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.ManifestElement_Version_Valid/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.PrivilegesElement_Many/: tizen-manifest.xml
src/unit_tests/test_samples/manifest/ManifestTest.PrivilegesElement_None/: tizen-manifest.xml
src/unit_tests/test_samples/smoke/: ClearMode_Tpk.tpk  DeinstallationMode_Tpk.tpk  DeltaMode_Tpk.delta  DeltaMode_Tpk.tpk  DeltaMode_Tpk_2.tpk  DisablePkg.tpk  EnablePkg.tpk  InstallationMode_Tpk.tpk  MountInstallationMode_Tpk.tpk  MountUpdateMode_Tpk.tpk  MountUpdateMode_Tpk_2.tpk  RecoveryMode_Tpk_Installation.tpk  RecoveryMode_Tpk_Update.tpk  RecoveryMode_Tpk_Update_2.tpk  ReinstallMode_Tpk.tpk  UpdateMode_Tpk.tpk  UpdateMode_Tpk_2.tpk
(+122 files in other folders)
