CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(TpkBackend)
SET(PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(BINDIR "${CMAKE_INSTALL_PREFIX}/bin")
SET(LIBDIR "${CMAKE_INSTALL_LIBDIR}")
SET(SHAREDIR "${CMAKE_INSTALL_PREFIX}/share")
SET(INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

# Compiler flags
SET(EXTRA_FLAGS "-fvisibility=hidden -flto -Wall -Wextra")
SET(CMAKE_C_FLAGS_PROFILING    "-O2 ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_PROFILING  "-O2 -std=c++11 ${EXTRA_FLAGS}")
SET(CMAKE_C_FLAGS_DEBUG        "-O0 -g ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG      "-O0 -std=c++11 -g ${EXTRA_FLAGS}")
SET(CMAKE_C_FLAGS_RELEASE      "-O2 -g ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_RELEASE    "-O2 -std=c++11 -g ${EXTRA_FLAGS}")
SET(CMAKE_CXX_FLAGS_CCOV       "-O0 -std=c++11 -g --coverage ${EXTRA_FLAGS}")

# Linker flags
SET(EXTRA_LINKER_FLAGS "-Wl,--as-needed")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${EXTRA_LINKER_FLAGS}")

# Targets
SET(TARGET_LIBNAME_TPK "tpk-installer")
SET(TARGET_TPK_BACKEND "tpk-backend")

SET(TARGET_SMOKE_TEST "smoke-test")
SET(TARGET_SMOKE_TEST_HELPER "smoke-test-helper")
SET(TARGET_MANIFEST_TEST "manifest-test")

ADD_DEFINITIONS("-DPROJECT_TAG=\"TPK_BACKEND\"")
ADD_DEFINITIONS("-DTPK_BACKEND_EXPORT_API=__attribute__((visibility(\"default\")))")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
INCLUDE(FindPkgConfig)
INCLUDE(ApplyPkgConfig)

# Find all needed packages once
PKG_CHECK_MODULES(APP_INSTALLERS_DEPS REQUIRED app-installers)
PKG_CHECK_MODULES(PKGMGR_DEPS REQUIRED pkgmgr)
PKG_CHECK_MODULES(TPK_MANIFEST_HANDLERS_DEPS REQUIRED tpk-manifest-handlers)
PKG_CHECK_MODULES(MANIFEST_PARSER_DEPS REQUIRED manifest-parser)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem regex program_options)
FIND_PACKAGE(GTest REQUIRED)

ADD_SUBDIRECTORY(src)
